--- a/internship.html
+++ b/internship.html
@@ -42,17 +42,17 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.lever.co/waystar/05f25474-2e95-4630-a09b-8652ac6366ca'>Waystar - Graphic Design Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://schumacher.recruitee.com/o/showroom-intern-summerfall-2019'>
       Showroom Intern - Summer/Fall 2019 - F. Schumacher & Co.
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Boston Boston</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/andela/jobs/1794389'>Job Application for Product Design Intern at Andela</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='http://tmmc.recruiterbox.com/jobs/fk031qi'>
@@ -87,11 +87,11 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/starry/jobs/4367513002'>Job Application for Starry Internet Installer at Starry</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4367513002'>Job Application for Starry Internet Installer at Starry</a></h5> 
 <p><span class="badge badge-light">Washington, District of Columbia</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://activision.referrals.selectminds.com/jobs/business-intelligence-intern-4033'>Business Intelligence Intern -  Activision Careers</a></h5> 
+<h5><a href='https://activision.referrals.selectminds.com/jobs/business-intelligence-intern-4033'>Business Intelligence Intern -  Activision Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -129,7 +129,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oy6Dafwb&__jvst=ER+-+Employee+Referral&__jvsd=scEWPgwm&__jvsc=Twitter&bid=nXgXVLwl'>Nutanix Careers - Intern - Systems Engineer - Objects &amp; Calm</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oy6Dafwb&__jvst=ER+-+Employee+Referral&__jvsd=scEWPgwm&__jvsc=Twitter&bid=nXgXVLwl'>Nutanix Careers - Intern - Systems Engineer - Objects &amp; Calm</a></h5> 
 <p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -247,7 +247,7 @@
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pagantis.workable.com/j/3DAC8272F0'>Java Software Engineer - Internship - Apply online - Pagantis - Jobs</a></h5> 
+<h5><a href='https://pagantis.workable.com/j/3DAC8272F0'>Java Software Engineer - Internship - Apply online - Pagantis - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Java Software Engineer - Internship at Pagantis.</p>
 <hr/>
@@ -283,7 +283,7 @@
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://luxasia.workable.com/j/D0216D477A'>Luxasia - Jobs: Business Project Intern - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://luxasia.workable.com/j/D0216D477A'>Luxasia - Jobs: Business Project Intern - Apply online</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -381,7 +381,7 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stantec.referrals.selectminds.com/jobs/engineering-intern-transportation-6006'>Engineering Intern, Transportation - Stantec Careers</a></h5> 
+<h5><a href='https://stantec.referrals.selectminds.com/jobs/engineering-intern-transportation-6006'>Engineering Intern, Transportation - Stantec Careers</a></h5> 
 <p><span class="badge badge-light">Ottawa, Ontario</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -439,7 +439,7 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://close2real.join.com/jobs/264837-kardiologe-internist-mit-klinikerfahrung-fuer-berlin-oder-halle-m-w-d'>Job @ close2real (Berlin): Kardiologe/Internist mi... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://close2real.join.com/jobs/264837-kardiologe-internist-mit-klinikerfahrung-fuer-berlin-oder-halle-m-w-d'>Job @ close2real (Berlin): Kardiologe/Internist mi... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -473,7 +473,7 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vimpelcom/ba58b802-211a-4c51-b39f-595321562005'>VEON - Intern People and Organization</a></h5> 
+<h5><a href='https://jobs.lever.co/vimpelcom/ba58b802-211a-4c51-b39f-595321562005'>VEON - Intern People and Organization</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
